# diet-app

./: .gitignore  README.md  TODO.md
.devcontainer/: devcontainer.json
.github/workflows/: pull_request.yml  test.yml
api/: pyproject.toml
backend/: alembic.ini  diet.db  pyproject.toml  ruff.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 84966d23f6ad_initial_migration.py  955a7884cc06_product_model_init.py
backend/app/api/: main.py
backend/app/api/core/: db.py  utils.py
backend/app/api/products/: models.py  routes.py  schemas.py  service.py
backend/app/api/routes/: products.py
backend/app/tests/: conftest.py  database.py  factories.py
backend/app/tests/api/products/: test_router.py  test_routes.py  test_service.py
backend/app/tests/api/routes/: test_products.py
backend/scripts/: transactions.py  transactions_test.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Calendar.tsx  Home.tsx  ProductList.tsx  ProductModal.tsx  Sidebar.tsx  Toast.css  Toast.tsx  TopBar.tsx
frontend/src/lib/: api.ts  providers.tsx  types.ts
