[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "fastapi[standard]==0.115.6",
    "sqlalchemy==2.0.36",
]

[dependency-groups]
dev = [
    "factory-boy==3.3.1",
    "faker==33.1.0",
    "pytest==8.3.4",
    "sqlalchemy-utils>=0.41.2",
]

[tool.pytest.ini_options]
pythonpath = "app"
